linux-user: Pull target-specific signal.c code into separate files
Pull target-specific code out of signal.c ifdefs into individual
foo/target_signal.c files.

TODO:
 * have a first patch which purely moves text and uses #include
 * second patch then does the changes needed to build target_signal.c
   as a separate object file

--- a/Makefile.target
+++ b/Makefile.target
@@ -106,7 +106,7 @@ op_helper.o ldst_helper.o user-exec.o: QEMU_CFLAGS += $(HELPER_CFLAGS)
 
 # Note: this is a workaround. The real fix is to avoid compiling
 # cpu_signal_handler() in user-exec.c.
-signal.o: QEMU_CFLAGS += $(HELPER_CFLAGS)
+target_signal.o signal.o: QEMU_CFLAGS += $(HELPER_CFLAGS)
 
 #########################################################
 # Linux user emulator target
@@ -118,7 +118,7 @@ $(call set-vpath, $(SRC_PATH)/linux-user/$(TARGET_ABI_DIR):$(SRC_PATH)/linux-use
 QEMU_CFLAGS+=-I$(SRC_PATH)/linux-user/$(TARGET_ABI_DIR) -I$(SRC_PATH)/linux-user
 obj-y = main.o syscall.o strace.o mmap.o signal.o thunk.o \
       elfload.o linuxload.o uaccess.o gdbstub.o cpu-uname.o \
-      user-exec.o $(oslib-obj-y)
+      user-exec.o target_signal.o $(oslib-obj-y)
 
 obj-$(TARGET_HAS_BFLT) += flatload.o
 
